# Baymax

./: .gitignore  README.md
autonomous_parking/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
autonomous_parking/autonomous_parking/: decision_node.py  parking_node.py  vision_node.py
autonomous_parking/config/: slot_metadata.yaml
autonomous_parking/launch/: parking_sim.launch.py  world_only.launch.py
autonomous_parking/media/materials/scripts/: isa_marker.material
autonomous_parking/models/ego_hatchback/: model.config  model.sdf
autonomous_parking/models/wheel_stopper/: model.config  model.sdf
autonomous_parking/scripts/: decision_node.py  parking_node.py  vision_node.py
autonomous_parking/worlds/: parking_lot.world  parking_lot.world.bak2
tools/: save_ros_images.py  save_ros_images_multi.py
